# jetson-home

KNN/: 8_1.txt  file2img.py
bags/rosbag2_2026_05_14-03_14_15/: metadata.yaml  rosbag2_2026_05_14-03_14_15_0.db3
bags/rosbag2_2026_05_14-03_14_24/: metadata.yaml  rosbag2_2026_05_14-03_14_24_0.db3
development/: .gitignore  development_README.md  waypoint_nav.py
development/.git__UPLOADBAK/: COMMIT_EDITMSG  index
development/lidar_demo/: lidar_obstacle_stop.py  scan_to_pointcloud.py
development/maps/: lab_map.pgm  lab_map.yaml
development/movement_demo/: move_robot_demo.py
development/mux/: twist_mux.yaml
development/nav2_launch/: r2_navigation_mux_launch.py
development/nav2_params/: r2_ackermann_nav2_params.yaml  ydlidar_reliable.yaml
development/polaris_path_corrector/: package.xml  setup.cfg  setup.py
development/polaris_path_corrector/config/: path_corrector.yaml
development/polaris_path_corrector/launch/: robot_path_correction.launch.py
development/polaris_path_corrector/polaris_path_corrector/: event_logger_node.py  nav2_goal_to_path_node.py  path_corrector_node.py  pure_pursuit_controller_node.py
development/script/: save_map.sh  start_mapping.sh  start_navigation.sh  start_navigation2.sh
py_installv0.02/: setup.py
py_installv0.02/Speech_Lib/: Speech_Lib.py
qr_code_recognition/: qrcode_parsing_csi.py  qrcode_parsing_usb.py
sidharth_dev/: README.md  ROADBLOCKS.md  d1_README.md  m1_README.md  m2_README.md  sidharth_general.md  sidharth_mapping.md  sidharth_nav2_knowledge.md
sidharth_dev/audio_record/: .check_audio.py.swp  .nano.swp  (+3 more)
(+61 files in other folders)
