<?xml version="1.0"?>
<package format="3">
  <name>polaris_path_corrector</name>
  <version>0.1.0</version>
  <description>Standalone path correction layer for robot-to-Polaris experiments.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
